# neolib

./: CMakeLists.txt  run.sh
src/: CMakeLists.txt  initializer_list.cpp  io.cpp  memory.cpp  static_array.cpp  string.cpp  utils.cpp
src/include/: initializer_list.hpp  io.hpp  memory.hpp  static_array.hpp  string.hpp  types.hpp  utils.hpp
test/: CMakeLists.txt  main.cpp
